--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://james-becker.github.io/beckerweb"
+baseURL = "https://james-becker.github.io/beckerweb/"
 languageCode = "en-us"
 title = "james becker web"
 # Enable comments by entering your Disqus shortname
