--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://james-becker.github.io/beckerweb/"
 languageCode = "en-us"
-title = "james becker web"
+title = "J. James Becker"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
@@ -12,12 +12,12 @@ publishDir = "docs"
   post = "/:year/:month/:day/:slug"
 
 [params]
-  name = "James Becker"
+  name = "J. James Becker"
   description = "Describe your website"
-  copyright = "POWERED BY [HUGO](//gohugo.io) - THEME: [HIKARI](//github.com/digitalcraftsman/hugo-hikari-theme) - © JOHN DOE"
+  copyright = "© J. James Becker"
 
   # Custom assets can be linked with their paths relative to static/
-  custom_css = []
+  custom_css = ["css/style-custom.css"]
   custom_js  = []
 
   # Links to newer/older blog posts
@@ -29,18 +29,19 @@ publishDir = "docs"
 
 [params.offcanvas]
   # Menu items
-  title = "Hi, I'm John Doe"
-  bio = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, pariatur!"
+  title = "James Becker"
+  bio = "James Becker is a writer, music producer, painter, elephant trainer and software developer residing in Bangkok, Thailand. Covered topics include technology, culture, philosophy, and Asia."
+
   subscribe = "Subscribe"
-  followme = "Follow me on"
+  followme = "Find me on"
 
   # Enable Google search
-  search_enabled = false
+  search_enabled = true
   search = "Search"
 
   [[params.offcanvas.socialnetworks]]
     name = "Github"
-    url = "//github.com/spf13"
+    url = "//github.com/james-becker"
 
   [[params.offcanvas.socialnetworks]]
     name = "Twitter"
